<resources>
    <string name="app_name">DocScan</string>
    <string name="about_item_text">About</string>
    <string name="share_log_item_text">Share log</string>
    <string name="sync_item_text">Upload</string>
    <string name="upload_item_text">Upload</string>
    <string name="help_item_text">Help</string>
    <string name="pdf_item_text">Saved PDFs</string>
    <string name="documents_item_text">Documents</string>
    <string name="camera_item_text">Camera</string>
    <string name="header_text">DocScan</string>
    <string name="account_edit_text">Set up account</string>
    <string name="account_not_logged_in">Anonymous user</string>
    <string name="account_logout">Logout</string>
    <string name="settings_item_text">Settings</string>
    <string name="dialog_ok_text">OK</string>
    <string name="dialog_no_text">No</string>
    <string name="dialog_yes_text">Yes</string>
    <string name="dialog_cancel_text">Cancel</string>
    <string name="activity_not_found_title">No standard app found</string>
    <string name="activity_not_found_text">Sorry, we could not find an app to open the file.</string>
    <string name="start_permission_title">Permission required</string>
    <string name="start_permission_retry_text">Do you want to give this permission?</string>
    <string name="start_permission_camera_text">The app requires permission to access the camera, otherwise it will not work.</string>
    <string name="start_permission_storage_text">The app requires permission to access your files, otherwise it will not work.</string>
    <string name="start_confirm_button_text">OK</string>
    <string name="start_cancel_button_text">Cancel</string>
    <string name="start_firebase_not_auth_text">Could not authenticate with Firebase / google-services. If you are a developer, you probably want the API key. In that case, take a look at the readme.</string>
    <string name="taking_picture_text">Taking picture</string>
    <string name="force_shoot_button_text">Shoot anyway</string>
    <string name="locked_exposure_text">Locked auto-exposure</string>
    <string name="unlocked_exposure_text">Unlocked auto-exposure</string>
    <string name="camera_document_hint_title">Tip for documents</string>
    <string name="camera_lock_exposure_title">Locking exposure</string>
    <string name="camera_lock_exposure_msg">This locks the current exposure and white balance. Please note that we cannot lock these values, after you leave the camera view.</string>
    <string name="camera_text_dir_dialog_title">Set text direction</string>
    <string name="camera_text_dir_dialog_msg">Do you want to change the orientation of the document text?</string>
    <string name="do_not_show_again_text">Do not show this message again.</string>
    <string name="camera_status_title_prefix">Status:</string>
    <string name="camera_tab_manual">Manual</string>
    <string name="camera_tab_auto">Automatic</string>
    <string name="camera_tab_settings">Settings</string>
    <string name="table_head_task_text">Task</string>
    <string name="table_head_time_text">time (ms)</string>
    <string name="focus_measure_debug_text">Focus measure:</string>
    <string name="page_segmentation_debug_text">Page segmentation:</string>
    <string name="no_file_found_msg">No picture file found.</string>
    <string name="no_file_found_title">File not found</string>
    <string name="button_ok">OK</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="instruction_series_fix">Hint for automatic mode: Try to solve the issue. If that does not work, switch to manual mode and take a picture manually.</string>
    <string name="instruction_empty">No page found</string>
    <string name="instruction_empty_detail">Could not find a page.\n\nSolution: Place the document on another background with a higher contrast to the document.</string>
    <string name="instruction_small">Move closer</string>
    <string name="instruction_small_detail">The document is too small.\n\nSolution: Decrease the distance between camera and document.</string>
    <string name="instruction_perspective">Change perspective</string>
    <string name="instruction_perspective_detail">The document boundary is not rectangular.\n\nSolution:\n(1) Get the document as parallel to the phone as possible.\n(2) Check if the boundary found is correct.</string>
    <string name="instruction_rotation">Rotate</string>
    <string name="instruction_rotation_detail">The document is rotated.\n\nSolution:\nRotate the document so that it is parallel to your phone.</string>
    <string name="instruction_no_focus_measured">Calculating focus</string>
    <string name="instruction_no_focus_measured_detail">Please wait, until focus measure is calculated.</string>
    <string name="instruction_unsharp">Not focused</string>
    <string name="instruction_unsharp_detail">The document appears to be not in focus.\n\nSolution:\nChange the focus point, by tapping on a part of the document that should be focused.</string>
    <string name="instruction_no_changes">Page already scanned</string>
    <string name="instruction_no_changes_detail">The page is already scanned.\n\nSometimes, if the page is very similar to the preceding page, it may appear to the app that it is the same page.</string>
    <string name="instruction_ok">OK</string>
    <string name="instruction_ok_detail">The document quality is fine for imaging.</string>
    <string name="instruction_unknown">state unknown</string>
    <string name="instruction_unknown_detail">state unknown</string>
    <string name="instruction_movement">movement detected</string>
    <string name="instruction_movement_detail">The image content or the phone is moving.\n\nSolution:\n(1) Hold the document still or (2) make sure the ScanTent or phone are not moving.</string>
    <string name="instruction_none"> </string>
    <string name="instruction_series_paused">Automatic mode paused</string>
    <string name="instruction_series_paused_detail">Automatic mode is currently paused. No images are taken and no quality measure is applied until the automatic mode is resumed.</string>
    <string name="instruction_searching_qr">searching QR code</string>
    <string name="instruction_searching_qr_detail">The app is searching for a QR code.</string>
    <string name="instruction_no_auto_focus">auto-focusing</string>
    <string name="instruction_no_auto_focus_detail">Camera could not perform an auto focus.\n\nSolution:\nChange the focus point, by tapping on a part of the document that should be focused.</string>
    <string name="toast_series_paused">Automated imaging paused</string>
    <string name="toast_series_started">Images are now taken automatically</string>
    <string name="toast_single">Images are taken manually</string>
    <string name="toast_device_calibrated">Device is now calibrated</string>
    <string name="ui_changes_title">What\'s new</string>
    <string name="ui_changes_text">Version 1.7 contains major UI changes.\nDo you want to read more about the UI changes? (Requires an internet connection.)</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="login_button_text">Login</string>
    <string name="login_check_input_toast">Please check your login credentials.</string>
    <string name="login_welcome_text">Welcome</string>
    <string name="login_loading_text">Login, please wait</string>
    <string name="login_error_text">User name or password is incorrect. Please reenter your credentials.</string>
    <string name="login_title">Login to Transkribus</string>
    <string name="document_item">Documents</string>
    <string name="flash_mode">Flash mode</string>
    <string name="flash_off_mode">Flash off</string>
    <string name="flash_auto_mode">Flash auto</string>
    <string name="flash_on_mode">Flash on</string>
    <string name="flash_torch_mode">Torch</string>
    <string name="show_grid_item_title">Show grid</string>
    <string name="hide_grid_item_title">Hide grid</string>
    <string name="gallery_item_title">Open gallery</string>
    <string name="upload_item">Upload</string>
    <string name="lock_exposure_item">Lock exposure and white balance</string>
    <string name="unlock_exposure_item">Unlock exposure and white balance</string>
    <string name="enable_spirit_level_item">Enable spirit level</string>
    <string name="disable_spirit_level_item">Disable spirit level</string>
    <string name="white_balance_auto_text">Auto</string>
    <string name="white_balance_text">Set white balance</string>
    <string name="white_balance_sunny_text">Daylight</string>
    <string name="series_create">New document</string>
    <string name="series_edit">Edit document</string>
    <string name="series_switch">Open document</string>
    <string name="series_qr">New document from QR code</string>
    <string name="crop_view_item_rotate">Rotate 90 degrees</string>
    <string name="crop_view_item_map">Preview mapping</string>
    <string name="crop_view_crop_dialog_title">Page boundary saved</string>
    <string name="crop_view_crop_dialog_text">The saved page boundary is used when you transform the images.
        All document images can be transformed at once in the document view.</string>
    <string name="crop_view_open_document_view">Open document view</string>
    <string name="map_view_item_save">Save image</string>
    <string name="map_view_loading_text">Please wait</string>
    <string name="img_prefix">IMG_</string>
    <string name="log_activity_text">Improve DocScan by sending us a log.
        Please note that we do not log personal data.
        Do you want to share your log file now?</string>
    <string name="share_log_button_text">OK</string>
    <string name="log_email_subject">DocScan - Log</string>
    <string name="log_email_to">holl@cvl.tuwien.ac.at</string>
    <string name="log_email_text">We highly appreciate your feedback! You can leave us a comment here:</string>
    <string name="calibration_description">To get an accurate device orientation, calibrate your device by placing it on top of the tent and then click the calibration button. Use this feature to adjust the document according to the position of your device. \n\nIf the device doesn\'t return accurate measurements, there is most likely problem with the sensors that technically can\'t be solved by the app.</string>
    <string name="calibration">Calibration</string>
    <string name="action_setting_show_gallery">Show gallery</string>
    <string name="action_setting_show_grid">Show grid</string>
    <string name="action_setting_hide_grid">Hide grid</string>
    <string name="action_setting_lock_wb">Lock white balance and exposure</string>
    <string name="action_setting_unlock_wb">Unlock white balance and exposure</string>
    <string name="action_setting_qr_mode">Create Document from QR code</string>
    <string name="action_setting_enable_spirit_level">Enable spirit level</string>
    <string name="action_setting_disable_spirit_level">Disable spirit level</string>
    <string name="action_setting_enable_illumination_correction">Remove shadow</string>
    <string name="action_setting_disable_illumination_correction">Disable shadow removal</string>
    <string name="remove_shadow">Remove Shadow from Scans</string>
    <string name="remove_shadow_instruction">DocScan corrects uneven illumination based on the reference image. Please place your phone on the top of the tent, parallel above the white paper. Capture a reference image and precede to scanning the document.</string>
    <string name="note">NOTE:</string>
    <string name="remove_shadow_note">This feature can only return precise results if used in combination with the scan tent. It requires fixed position of the camera during scanning.</string>
</resources>