<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout_root"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="84dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="46dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="10dp"
                app:srcCompat="@drawable/ic_calibrate_gray"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:textColor="@color/dialog_text_color"
                android:text="@string/calibration"
                android:textSize="21sp" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="126dp"
            android:layout_marginRight="13dp"
            android:layout_marginLeft="10dp"
            android:layout_marginEnd="13dp"
            android:layout_marginStart="10dp"
            android:textColor="@color/dialog_text_color"
            android:text="@string/calibration_description"
            android:textSize="15sp" />

        <CheckBox xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/skip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="7dp"
            android:layout_marginTop="17dp"
            android:buttonTint="@color/colorAccent"
            android:text="@string/do_not_show_again_text" />

</LinearLayout>